# liminal

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
backend/: main.py  sessions.py
backend/storage/: database.py
docs/: ai-layers.md  architecture-plan.md  architecture.md  attention-ownership.md  design-philosophy.md  document-model.md  intro.md  project-brief.md  semantic-zoom.md  theory.md  ui-settings-control.md  ux-poc-design.md
docs/research/: attention-instrumentation.md  token-annotation-systems.md
frontend/: index.html
frontend/src/: cursor.ts  doc-list.ts  documents.ts  input.ts  main.ts  markdown.ts  measurement.ts  mock.ts  session-client.ts  settings.ts  spike.ts  store.ts  stream.ts  styles.css  timeline.ts  token-renderer.ts  types.ts  viewport-tracker.ts  viewport.ts
frontend/src/styles/: base.css  blocks.css  controls.css  doc-list.css  settings.css
schema/: init.sql
