[project]
name = "liminal"
version = "0.1.0"
description = "A conversational interface that instruments human attention"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=15.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11",
    "pytest>=8.0",
]
inference = [
    "torch>=2.6",
    "transformers>=4.50",
]

[tool.ruff]
line-length = 100
